--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
                     <a class="" href="">
                         <img src="images/icon.svg" alt="">
                     </a>
+                    <button id="navbar-open" class="menu">
+                        <img src="images/menu_FILL0_wght400_GRAD0_opsz24.svg" alt="">
+                    </button>
                     <ul class="nav-list">
                         <li class="nav-item"><a href="#" class="nav-link">Product</a></li>
                         <li class="nav-item"><a href="#" class="nav-link">Customers</a></li>
@@ -30,9 +33,7 @@
                             <img src="images/dark-mode.svg" alt="mode-icon">
                         </a>
                     </ul>
-                    <button id="navbar-open" class="menu">
-                        <img src="images/menu_FILL0_wght400_GRAD0_opsz24.svg" alt="">
-                    </button>
+
                 </div>
             </div>
         </navbar>
@@ -115,6 +116,32 @@
         </section>
 
         <!-- product section -->
+
+        <!-- section managment -->
+        <section class="managment">
+            <div class="container managment-section ">
+                <div class="managment-section-left">
+                    <p class="managment-section-left__content1">Effortless Validation for</p>
+                    <p class="managment-section-left__content2">Management</p>
+                    <p class="managment-section-left__content3">The Myspace page defines the individual, his or her
+                        characteristics, traits, personal choices and the overall
+                        personality of the person.</p>
+                    <p class="managment-section-left__content4">Accessory makers</p>
+                    <p class="managment-section-left__conten__5">While most people enjoy casino gambling, sports
+                        betting,
+                        lottery and bingo playing for the fun</p>
+                    <p class="managment-section-left__content4">Alterationists</p>
+                    <p class="managment-section-left__conten__5">If you are looking for a new way to promote your
+                        business that
+                        won’t cost you more money,</p>
+                </div>
+                <div class="managment-right">
+                    <img src="images/managment-right.svg" alt="">
+                </div>
+            </div>
+        </section>
+
+        <!-- section managment -->
     </main>
 
 
