--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
         <navbar class="navbar">
             <div class="container">
                 <div class="navigation">
-                    <a class="" href="">
-                        <img src="images/icon.svg" alt="">
+                    <a class="#" href="">
+                        <img src="images/icon.svg" alt="menu-img">
                     </a>
                     <button id="navbar-open" class="menu">
                         <img src="images/menu_FILL0_wght400_GRAD0_opsz24.svg" alt="">
@@ -109,7 +109,9 @@
                         </p>
                     </div>
                 </div>
-
+                <button class="product-menu__btn">
+                    SIGN UP NOW
+                </button>
             </div>
         </section>
 
