--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
                     <a class="#" href="">
                         <img src="images/icon.svg" alt="menu-img">
                     </a>
-
+                    <button id="navbar-open" class="menu">
+                        <img src="images/menu_FILL0_wght400_GRAD0_opsz24.svg" alt="">
+                    </button>
                     <ul class="nav-list">
                         <li class="nav-item"><a href="#" class="nav-link">Product</a></li>
                         <li class="nav-item"><a href="#" class="nav-link">Customers</a></li>
