--- a/index.html
+++ b/index.html
@@ -72,8 +72,9 @@
                         experience.</p>
                     <div class="btn-hero">
                         <button class="site-hero__left__btn1">Get started</button>
-                        <span><a href=""><img class="img-play" src="images/play.svg" alt=""></a></span><button
-                            class="site-hero__left__btn2">Watch the
+                        <span><a href="https://www.youtube.com/watch?v=Qa_4c9zrxf0"><img class="img-play"
+                                    src="images/play.svg" alt=""></a></span><button class="site-hero__left__btn2">Watch
+                            the
                             Video</button>
                     </div>
                 </div>
@@ -436,28 +437,29 @@
         <div class="container">
             <div class="footer-card">
                 <div class="footer-card1">
-                    <img src="" alt="">
+                    <img src="images/icon.svg" alt="">
                     <div class="footer-card1__grid">
-                        <a href="">
-                            <img src="" alt="">
+                        <a href="https://www.instagram.com/">
+                            <img src="images/instagram.svg" alt="">
                         </a>
-                        <a href="">
-                            <img src="" alt="">
+                        <a
+                            href="https://www.facebook.com/campaign/landing.php?campaign_id=11554070363&extra_1=s%7Cc%7C477437435741%7Ce%7Cfacebook%7C&placement=&creative=477437435741&keyword=facebook&partner_id=googlesem&extra_2=campaignid%3D11554070363%26adgroupid%3D112923417056%26matchtype%3De%26network%3Dg%26source%3Dnotmobile%26search_or_content%3Ds%26device%3Dc%26devicemodel%3D%26adposition%3D%26target%3D%26targetid%3Dkwd-541132862%26loc_physical_ms%3D1028523%26loc_interest_ms%3D%26feeditemid%3D%26param1%3D%26param2%3D&gclid=Cj0KCQiA4NWrBhD-ARIsAFCKwWuSwcXsIa_xywopKTqqrmH4slFXKk17st6MXn7Y4DaIXxQgyF2wwl4aAt8kEALw_wcB">
+                            <img src="images/facebook.svg" alt="">
                         </a>
-                        <a href="">
-                            <img src="" alt="">
+                        <a href="https://twitter.com/?lang=en">
+                            <img src="images/teitter.svg" alt="">
                         </a>
                     </div>
                 </div>
                 <div class="footer-card2">
-                    <h5 class="footer-card2__title">Resource</h5>
+                    <h5 class="footer-card2__title"><b>Resource</b></h5>
                     <p class="footer-card2__title">About Us</p>
                     <p class="footer-card2__title">Blog</p>
                     <p class="footer-card2__title">Contact</p>
                     <p class="footer-card2__title">FAQ</p>
                 </div>
                 <div class="footer-card2">
-                    <h5 class="footer-card2__title">Legal Stuff</h5>
+                    <h5 class="footer-card2__title"><b>Legal Stuff</b></h5>
                     <p class="footer-card2__title">Disclaimer</p>
                     <p class="footer-card2__title">Financing</p>
                     <p class="footer-card2__title">Privacy</p>
@@ -467,7 +469,7 @@
                     <p class="footer-card3__p">knowing you're always on the best energy deal.
                     </p>
                     <form action="">
-                        <input type="text">
+                        <input class="footer-card3__input" type="text">
                     </form>
                     <button class="footer-card3__btn">Sign up Now</button>
                 </div>
